<resources>
    <string name="app_name">Мои дела</string>
    <string name="service_unavailable_message">Сервис нe доступен</string>
    <string name="no_connection_message">Отсутствует интернет соединение</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="try_again">Попробовать снова</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_navigation_example" />
    <string name="isDone">isDone</string>
    <string name="todo_item_title" />
    <string name="button_save">Сохранить</string>
    <string name="themes">Тема</string>
    <string name="sort_by">Сортировать</string>
    <string name="service_is_unavailable">Сервис недоступен</string>
    <string name="title">Задачи</string>
    <string name="number_of_completed">Выполнено - 1</string>
    <string name="empty_list">Список пуст</string>
    <string name="menu_sign_out">Выйти</string>

    <string name="menu_home">home</string>
    <string name="menu_gallery">gallery</string>
    <string name="menu_slideshow">slideshow</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="title_registration">регистрация</string>


    <string name="hint_password">Пароль</string>
    <string name="hint_login">Логин</string>
    <string name="title_sigh_in">войти</string>
    <string name="title_error">отсутствует интернет</string>
    <string name="title_select_user">Выберите аккаунт для входа</string>
    <string name="title_search">поиск</string>
    <string name="title_sort">сортировка</string>
    <string name="title_filter">фильтр</string>
    <string name="report_in_work_title">в работе</string>
    <string name="report_important_title">важные</string>
    <string name="report_is_done_title">выполнено</string>
    <string name="content_description_menu">menu</string>
    <string name="content_description_add_task">add</string>
    <string name="tint_task_text">Введите задачу</string>
    <string name="date_picker_title">Выберите дату</string>
    <string name="content_description_current_user">текущий пользователь</string>
    <string name="content_description_icon_app">иконка приложения</string>
    <string name="content_description_user">пользователь</string>
    <string name="content_description_importance">важность</string>
    <string name="content_description_add_new_user">добавить нового пользователя</string>
    <string name="add_user">Добавить аккаунт</string>
    <string name="content_description_minus_separator">минус</string>
    <string name="importance">Важность</string>
    <string name="low_importance">низная</string>
    <string name="basic_importance">обычная</string>
    <string name="important_importance">высокая</string>
    <string name="content_description_deadline">Срок выполнения</string>
    <string name="content_description_close">закрыть</string>
    <string name="save">сохранить</string>
    <string name="delete">удалить</string>
    <string name="content_description_back">назад</string>
    <string name="title_filters">Фильтр</string>
    <string name="hide_completed">Скрыть выполненные</string>
    <string name="title_hide_completed_false">Показать</string>
    <string name="title_hide_completed_true">Скрыть</string>
    <string name="title_filters_other">Прочие отборы</string>
    <string name="title_other_filter_1">фильтр 2</string>
    <string name="content_description_hide_completed_filter">скрыть выполненные</string>
    <string name="content_description_other_filter_1">прочие фильтры 1</string>
    <string name="content_description_other_filter_2">прочие фильтры 2</string>
    <string name="title_other_filter_2">фильтр 1</string>
    <string name="title_sorting">Сортировка</string>
    <string name="sort_created_at_desc">дата создания (убыв)</string>
    <string name="sort_created_at_inc">дата создания (возр)</string>
    <string name="sort_change_at_desc">дата изменения (убыв)</string>
    <string name="sort_change_at_inc">дата изменения (возр)</string>
</resources>