<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/support_modal_background">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shp_bottom_sheet"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_minus"
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/content_description_minus_separator"
            android:src="@drawable/ic_bottom_sheet_line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_sorting"
            android:textAppearance="@style/TextAppearance.Title" />

        <RadioGroup
            android:id="@+id/sorting_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:checkedButton="@+id/created_at_desc_sort">

            <RadioButton
                android:id="@+id/created_at_desc_sort"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sort_created_at_desc" />

            <RadioButton
                android:id="@+id/created_at_inc_sort"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sort_created_at_inc" />

            <RadioButton
                android:id="@+id/change_at_desc_sort"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sort_change_at_desc" />

            <RadioButton
                android:id="@+id/change_at_inc_sort"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sort_change_at_inc" />

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save_sorting"
            style="@style/TextAppearance.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shp_button_primary"
            android:text="@string/save"
            android:textColor="@color/white" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.coordinatorlayout.widget.CoordinatorLayout>