<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_primary"
    tools:context=".presentation.auth.AuthFragment"
    android:orientation="vertical">

    <include
        layout="@layout/view_application_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.Body"
            android:textColor="@color/label_primary"
            android:text="@string/title_select_user"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_local_users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="32dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_user" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/back_primary"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tint="@color/support_fill_secondary"
                android:contentDescription="@string/content_description_add_new_user"
                android:src="@drawable/ic_add_user"/>

            <TextView
                android:id="@+id/tw_add_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.Regular"
                android:text="@string/add_user" />

        </LinearLayout>

</LinearLayout>