<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/support_modal_background" >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shp_bottom_sheet"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_minus"
                android:layout_width="40dp"
                android:layout_height="4dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/content_description_minus_separator"
                android:src="@drawable/ic_bottom_sheet_line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="8dp"
                android:textAppearance="@style/TextAppearance.Title"
                android:text="@string/importance"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:weightSum="3"
                android:layout_marginHorizontal="8dp" >

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ll_low_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/shp_report_primary"
                    android:backgroundTint="@color/label_primary"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/ic_important"
                        android:contentDescription="@string/content_description_importance"
                        app:tint="@color/color_green" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:layout_marginVertical="8dp"
                        android:text="@string/low_importance"
                        android:textAppearance="@style/TextAppearance.Body" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ll_basic_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/shp_report_primary"
                    android:backgroundTint="@color/label_primary"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/ic_important"
                        android:contentDescription="@string/content_description_importance"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:layout_marginVertical="8dp"
                        android:text="@string/basic_importance"
                        android:textAppearance="@style/TextAppearance.Body" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ll_important_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"
                    android:background="@drawable/shp_report_primary"
                    android:backgroundTint="@color/label_primary"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_marginTop="8dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_important"
                        android:contentDescription="@string/content_description_importance"
                        app:tint="@color/color_coral" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:layout_marginVertical="8dp"
                        android:text="@string/important_importance"
                        android:textAppearance="@style/TextAppearance.Body" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.coordinatorlayout.widget.CoordinatorLayout>