<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
<!--    tools:openDrawer="start">-->

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back_primary">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:background="@color/back_secondary"
            android:theme="@style/Theme.MyApplication.AppBarOverlay">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_bar_height"
                app:collapsedTitleTextAppearance="@style/TextAppearance.Title"
                app:collapsedTitleTextColor="?android:attr/textColorPrimary"
                app:expandedTitleMarginBottom="48dp"
                app:expandedTitleMarginStart="60dp"
                app:expandedTitleTextAppearance="@style/TextAppearance.LargeTitle"
                app:expandedTitleTextColor="?android:attr/textColorPrimary"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed" >

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/Theme.MyApplication.PopupOverlay">

                    <ImageButton
                        android:id="@+id/ib_menu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start|center_vertical"
                        android:background="@color/back_secondary"
                        app:tint="@color/white"
                        android:src="@drawable/ic_menu"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="16dp"
                        android:textSize="20sp"
                        android:gravity="start|center_vertical"
                        android:text="@string/title"
                        android:textAppearance="@style/TextAppearance.Body"
                        android:textColor="@color/white"/>

                </androidx.appcompat.widget.Toolbar>

                <Button
                    android:id="@+id/btn_sing_up"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:textAppearance="@style/TextAppearance.Subhead"
                    android:textColor="?android:attr/textColorTertiary"
                    android:layout_marginHorizontal="16dp"
                    android:layout_gravity="center"
                    android:background="@drawable/shape_button_secondary"
                    android:drawableLeft="@drawable/ic_search"
                    android:drawableTint="@color/white"
                    android:textSize="10dp"
                    android:text="поиск"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="1000" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="60dp"
                    android:layout_marginBottom="18dp"
                    tools:text="@string/number_of_completed"
                    android:textAppearance="@style/TextAppearance.Body"
                    android:textColor="?android:attr/textColorTertiary"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="1000" />

                <CheckBox
                    android:id="@+id/cb_hide_completed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="8dp"
                    app:layout_anchor="@id/app_bar"
                    app:layout_anchorGravity="bottom|end"
                    app:layout_collapseMode="pin"
                    app:tint="?attr/colorAccent"
                    android:button="@drawable/is_filter_hide_completed_checkbox"/>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>


        <include
            android:id="@+id/rv_list"
            layout="@layout/view_tasks_recyclerview" />

        <ProgressBar
            android:id="@+id/tv_loading_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/support_border_primary"/>

        <TextView
            android:id="@+id/tv_empty_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:gravity="center"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="14sp"
            android:text="@string/empty_list"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="end|bottom"
            android:background="@color/support_border_primary"
            android:backgroundTint="@color/support_border_primary"
            app:srcCompat="@android:drawable/ic_input_add"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@color/back_primary"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer"
        app:itemTextColor="@color/white"
        app:itemIconTint="@color/white"/>

</androidx.drawerlayout.widget.DrawerLayout>
